Added framework to location prompt explainer
Added framework that shows a exlanation to location request when location permission is not allowed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="title_profile">Profile</string>
     <string name="title_notifications">Notifications</string>
     <string name="abs_title">Fields</string>
+    <string name="empty_text">No Fields close to your location!</string>
+    <string name="popup_prompt_location">Location is required to find the closest Fields to you!</string>
 
     <string name="selected_place">Last selected place:</string>
     <string name="place_details">
