--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,12 @@
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="friend">Friend</string>
     <string name="friends">Friends</string>
+    <string name="realname">Real name</string>
+    <string name="username">Username</string>
+    <string name="alread_have_an_account">"Already have an account? Sign in"</string>
+    <string name="logo">Logo</string>
+    <string name="welcome">Welcome to Fields! Let\'s create an account for you</string>
+    <string name="welcome_back">Welcome back!</string>
 
 </resources>
 
