--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,6 @@
     <string name="app_name">Fields</string>
     <string name="bottom_map_title">Map</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_main">Fields</string>
@@ -65,6 +64,8 @@
     <string name="welcome">Welcome to Fields! Let\'s create an account for you</string>
     <string name="welcome_back">Welcome back!</string>
     <string name="forgot_password_text">Please enter your user\'s email so we can send you a message to change the password! You\'ll be back on Fields in no time </string>
+    <string name="imtext">I\'m</string>
+    <string name="people_here">%1$s People here</string>
 
     <string-array name="role_spinner">
         <item>Player</item>
