--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,10 +76,17 @@
     <string name="custimize_profile_text">Customize profile</string>
     <string name="badges">Badges</string>
     <string name="fields_plus">FIELDS Plus</string>
-    <string name="field_area">Field Area</string>
+    <string name="field_area">Field city</string>
     <string name="field_address">Field Address</string>
     <string name="field_type">Field type</string>
     <string name="goal_count">Goal count</string>
+    <string name="press_text2">Tap to choose field picture</string>
+    <string name="field_access_text">Field access type</string>
+    <string name="tap_to_find">Tap to find in map</string>
+    <string name="map_explanation">To find field address, search for the field in map and copy the address from there. Easy as that!</string>
+    <string name="goto_map">OK, Go to map</string>
+    <string name="ok">ok</string>
+
 
     <string-array name="role_spinner">
         <item>Player</item>
@@ -123,6 +130,13 @@
         <item>9</item>
         <item>10</item>
 
+    </string-array>
+
+    <string-array name="field_access_type_array">
+        <item>Booking only</item>
+        <item>Booking, free if space</item>
+        <item>No booking</item>
+        <item>No outside access</item>
     </string-array>
 </resources>
 
