--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,7 +76,7 @@
     <string name="custimize_profile_text">Customize profile</string>
     <string name="badges">Badges</string>
     <string name="fields_plus">FIELDS Plus</string>
-    <string name="field_area">Field city</string>
+    <string name="field_area">Field area</string>
     <string name="field_address">Field Address</string>
     <string name="field_type">Field type</string>
     <string name="goal_count">Goal count</string>
@@ -86,6 +86,7 @@
     <string name="map_explanation">To find field address, search for the field in map and copy the address from there. Easy as that!</string>
     <string name="goto_map">OK, Go to map</string>
     <string name="ok">ok</string>
+    <string name="edit_field">Edit Field</string>
 
 
     <string-array name="role_spinner">
