--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,6 +87,12 @@
     <string name="goto_map">OK, Go to map</string>
     <string name="ok">ok</string>
     <string name="edit_field">Edit Field</string>
+    <string name="end_training">End training</string>
+    <string name="currently_training_at">Currently training at..</string>
+    <string name="training_time_text">Training time</string>
+    <string name="done">Done</string>
+    <string name="im_training_here">I\'m training here</string>
+    <string name="im_not_training_here">End training</string>
 
 
     <string-array name="role_spinner">
