--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,6 +106,8 @@
     <string name="event_location">Event Location</string>
     <string name="choose_field">Choose field</string>
     <string name="search_field">Search Field</string>
+    <string name="no_results_found">No results found</string>
+    <string name="publish">Publish</string>
 
 
     <string-array name="role_spinner">
