--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,7 +139,7 @@
     <string name="feed">Feed</string>
     <string name="profile">Profile</string>
     <string name="team">Team</string>
-    <string name="no_events_coming">No upcoming events</string>
+    <string name="no_events_coming">No upcoming events. Time to relax!</string>
     <string name="players">Players</string>
     <string name="team_chat">Team chat</string>
     <string name="edit_team">Edit team</string>
@@ -148,6 +148,18 @@
     <string name="event_field">at %1$s</string>
     <string name="from">From</string>
     <string name="to">To</string>
+    <string name="are_you_sure">Are you sure you want to leave the team?</string>
+    <string name="team_username">team\'s username</string>
+    <string name="team_full_name">Team\'s Full Name</string>
+    <string name="error_team_full_name">Please enter Team\'s full name</string>
+    <string name="error_team_username">Please enter Team\'s username</string>
+    <string name="error_team_exists">Team with same name already exists</string>
+    <string name="error_occurred_creating_team">An error occurred creating team. Please try again</string>
+    <string name="you_are_in_team">You are already in a team</string>
+    <string name="team_created_successfully">Team created successfully</string>
+    <string name="create_new_team">Create New Team</string>
+    <string name="create_team">Create Team</string>
+    <string name="stay">Stay</string>
 
     <string-array name="role_spinner">
         <item>Player</item>
@@ -481,6 +493,26 @@
         <item><![CDATA[Zimbabwe]]><value /></item>
 
     </string-array>
+
+    <string name="title_activity_welcome">Home Screen</string>
+    <string name="next">NEXT</string>
+    <string name="skip">SKIP</string>
+    <string name="start">GOT IT</string>
+
+    <string name="slide_1_title">Hello Food!</string>
+    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>
+
+    <string name="slide_2_title">Movie Tickets</string>
+    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
+
+    <string name="slide_3_title">Great Discounts</string>
+    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
+
+    <string name="slide_4_title">World Travel</string>
+    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
+
+    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
+    <string name="play_again">Play Again</string>
 </resources>
 
 
