--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,7 +102,7 @@
     <string name="add">Add</string>
     <string name="add_homefield">Add as team\'s home field </string>
     <string name="event_type">Event type</string>
-    <string name="event_time">Event time</string>
+    <string name="event_date">Event date</string>
     <string name="event_location">Event Location</string>
     <string name="choose_field">Choose field</string>
     <string name="search_field">Search Field</string>
@@ -161,7 +161,17 @@
     <string name="create_team">Create Team</string>
     <string name="you_arent_in_any_team">You aren\'t in any team. Join a team now or create a new one to get the best out of Fields! </string>
     <string name="join_existing_team">Join existing team</string>
+    <string name="no_pending_players">No requests pending. When player wants to join your team, the request will appear here!</string>
+    <string name="manage_team">- Manage your team -</string>
+    <string name="set_event">- Set team events -</string>
+    <string name="see_who_is_in">- See who\'s in and who\'s out from events -</string>
+    <string name="chat_with_team">- Chat with team (Fields Plus) -</string>
     <string name="stay">Stay</string>
+    <string name="event_details">Event details</string>
+    <string name="delete_event">Delete event</string>
+    <string name="event_deleted">Event deleted</string>
+    <string name="create_new_event">Create New Event</string>
+
 
 
     <string-array name="role_spinner">
