chat finished almost

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -162,15 +162,24 @@
     <string name="you_arent_in_any_team">You aren\'t in any team. Join a team now or create a new one to get the best out of Fields! </string>
     <string name="join_existing_team">Join existing team</string>
     <string name="no_pending_players">No requests pending. When player wants to join your team, the request will appear here!</string>
-    <string name="manage_team">- Manage your team -</string>
-    <string name="set_event">- Set team events -</string>
-    <string name="see_who_is_in">- See who\'s in and who\'s out from events -</string>
-    <string name="chat_with_team">- Chat with team (Fields Plus) -</string>
+    <string name="manage_team">- Manage your team </string>
+    <string name="set_event">- Set team events </string>
+    <string name="see_who_is_in">- See who\'s in and out from events </string>
+    <string name="chat_with_team">- Chat with team (Fields Plus) </string>
     <string name="stay">Stay</string>
     <string name="event_details">Event details</string>
     <string name="delete_event">Delete event</string>
     <string name="event_deleted">Event deleted</string>
     <string name="create_new_event">Create New Event</string>
+    <string name="discover">Discover</string>
+    <string name="level_up1">Level up your soccer game by upgrading to Fields </string>
+    <string name="level_up2">Only one of your team\'s members need\'s to have Fields</string>
+    <string name="level_up3">in order to open the</string>
+    <string name="team_chat_feature">team chat</string>
+    <string name="conversation">Conversation</string>
+    <string name="plus">Plus</string>
+    <string name="plus_comma">Plus!</string>
+    <string name="chat">Chat</string>
 
 
 
