--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -198,7 +198,17 @@
     <string name="no_upcoming_events_field">No upcoming events on this Field. Great time to go out and play!</string>
     <string name="reputation_count">%1$s Reputation</string>
     <string name="training_summary">Training Summary</string>
-
+    <string name="no_friends">You don\'t have any friends. Add your friends or invite them to Fields for maximum fun!</string>
+    <string name="edit_profile">Edit Profile</string>
+    <string name="please_enter_username">Please enter username</string>
+    <string name="please_enter_real_name">Please enter real name</string>
+    <string name="change_password">Change password</string>
+    <string name="old_password">Old Password</string>
+    <string name="new_password">New Password</string>
+    <string name="please_enter_old_password">Please enter old password</string>
+    <string name="please_enter_new_password">Please enter new password</string>
+    <string name="old_password_is_wrong">Old password is wrong</string>
+    <string name="password_changed">Password changed</string>
 
     <string-array name="role_spinner">
         <item>Player</item>
